--- a/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
@@ -11,6 +11,7 @@
 {% block stylesheets %}
 	<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/bootstrap-theme.min.css') }}" type="text/css" rel="stylesheet" />
+	<link href="{{ asset('css/bootstrap-submenu.min.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/main.css') }}" type="text/css" rel="stylesheet" />
 {% endblock stylesheets %}
 
