--- a/src/Busybee/HomeBundle/Resources/views/Form/initAjaxForm.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Form/initAjaxForm.html.twig
@@ -18,7 +18,8 @@
 			$.ajax({
 				type: $(this).attr('method'),
 				url: $(this).attr('action'),
-				data: $(this).serialize()
+				data: $(this).serialize(),
+				async: false
 			})
 			.done(function (data) {
 				if (typeof data.redirect !== 'undefined') {
