--- a/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
@@ -2,29 +2,25 @@
 
 {% trans_default_domain "BusybeeHomeBundle" %}
 
-{% if config.signin is defined %}
-	{% if config.signin and not is_granted('ROLE_USER') %}
-	<form class="navbar-form navbar-right" action="{{ path('busybee_security_check') }}" method="post">
-		<div class="form-group">
-			<input type="text" id="username" class="form-control input-sm" name="_username" value="{{ last_username|default("") }}" placeholder="{{ 'Username/Email'|trans }}" />
-		</div>
-		<div class="form-group">
-			<input type="password" id="password" name="_password" class="form-control input-sm" placeholder="{{ 'Password'|trans }}" />
-		</div>
-		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-		<button type="submit" class="btn btn-success">{{ 'Sign In'|trans }}</button>
-	</form>  
-	{% elseif config.signin is null %}
-		&nbsp;
-	{% elseif config.signin and is_granted('ROLE_USER') %}
-		<ul class="nav navbar-nav navbar-right">
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.formatName }}<span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="{{ path('busybee_security_logout') }}" class="btn btn-danger" role="button" >{{ 'Sign Out'|trans }}</a></li> 
-				</ul>
-			</li>
-		</ul>
-	{% endif %}
+{% if not is_granted('ROLE_USER') %}
+<form class="navbar-form navbar-right" action="{{ path('busybee_security_check') }}" method="post">
+	<div class="form-group">
+		<input type="text" id="username" class="form-control input-sm" name="_username" value="{{ last_username|default("") }}" placeholder="{{ 'Username/Email'|trans }}" />
+	</div>
+	<div class="form-group">
+		<input type="password" id="password" name="_password" class="form-control input-sm" placeholder="{{ 'Password'|trans }}" />
+	</div>
+	<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+	<button type="submit" class="btn btn-success">{{ 'Sign In'|trans }}</button>
+</form>  
+{% elseif is_granted('ROLE_USER') %}
+	<ul class="nav navbar-nav navbar-right">
+		<li class="dropdown">
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.formatName }}<span class="caret"></span></a>
+			<ul class="dropdown-menu">
+				<li><a href="{{ path('busybee_security_logout') }}" role="button" >{{ 'Sign Out'|trans }}</a></li> 
+			</ul>
+		</li>
+	</ul>
 {% endif %}
 
