--- a/src/Busybee/HomeBundle/Resources/views/Menu/site-menu.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/site-menu.html.twig
@@ -1,21 +1,22 @@
-{# src/Busybee/DisplayBundle/Resources/views/Menu/user-menu.html.twig #}
+{# src/Busybee/HomeBundle/Resources/views/Menu/site-menu.html.twig #}
 
 {% trans_default_domain "BusybeeHomeBundle" %}
 
+
 {% if is_granted('ROLE_USER') %}
-<li class="dropdown">
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'menu.Site'|trans }}<span class="caret"></span></a>
-	<ul class="dropdown-menu">
-		<li><a href="{{ path("busybee_security_user_edit") }}">{{ 'menu.site.security'|trans }}</a></li> 
-		<li><a href="{{ path("update_start") }}">{{ 'menu.site.update'|trans }}</a></li> 
-	</ul>
-</li>
-<li class="dropdown">
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'menu.Misc'|trans }}<span class="caret"></span></a>
-	<ul class="dropdown-menu">
-		<li><a href="{{ path("home_template") }}">{{ 'menu.templateDesign'|trans }}</a></li> 
-	</ul>
-</li>
+	<li class="dropdown">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-submenu>{{ 'menu.Site'|trans }}<span class="caret"></span></a>
+		<ul class="dropdown-menu">
+			{% include 'BusybeeSecurityBundle:Menu:security.html.twig' %}
+			<li><a href="{{ path("update_start") }}">{{ 'menu.site.update'|trans }}</a></li> 
+		</ul>
+	</li>
+	<li class="dropdown">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'menu.Misc'|trans }}<span class="caret"></span></a>
+		<ul class="dropdown-menu">
+			<li><a href="{{ path("home_template") }}">{{ 'menu.templateDesign'|trans }}</a></li> 
+		</ul>
+	</li>
 {% endif %}
 
 
