--- a/src/Busybee/SecurityBundle/Resources/views/Security/login.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/Security/login.html.twig
@@ -1,5 +1,5 @@
 {# src/General/SecurityBundle/Resources/views/Security/login.html.twig #}
-{% extends "BusybeeHomeBundle:Default:index.html.twig" %}
+{% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 {% block title %}Busybee - {{ 'security.login.title'|trans }}{% endblock title %}
