--- a/src/Busybee/SecurityBundle/Resources/views/User/register.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/register.html.twig
@@ -1,26 +1,51 @@
 {# src/General/SecurityBundle/Resources/views/User/register.html.twig #}
-{% extends "BusybeeSecurityBundle::layout.html.twig" %}
+{% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
+
+{% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
+
+{% block stylesheets %}
+{{ parent() }}
+	<link href="{{ asset('css/glyphicons.css') }}" type="text/css" rel="stylesheet" />
+{% endblock stylesheets %}
+
 {% block title %}{{ parent() }}{{ 'user.registration.title'|trans }}{% endblock title %}
+{% block headerTitle %}{{ 'user.registration.title'|trans }}{% endblock headerTitle %}
+{% block headerLead %}{{ 'user.registration.description'|trans }}{% endblock headerLead %}
 
-{% block titleBlock %}
-<div class="jumbotron">
-	<h1>{{ 'user.registration.title'|trans }}</h1>
-	<p class="lead">{{ 'user.registration.description'|trans }}</p>
-</div>
-{% endblock titleBlock %}
 
-{% block SecurityBundleContent %}
+{% block contentContainer %}
 <div class="form_error"></div>
 {{ form_start(form) }}
-<div id="form_body">
-	{% include "BusybeeSecurityBundle:User:register_content.html.twig" %}
-</div>
+	<div id="form_body" class="container-fluid">
+		{% include "BusybeeSecurityBundle:User:register_content.html.twig" %}
+	</div>
 {{ form_end(form) }}
-{% endblock SecurityBundleContent %}
+{% endblock contentContainer %}
 
 {% block javascripts %}
-{{parent() }}
-{% include "BusybeeHomeBundle:Form:initAjaxForm.html.twig" %}
+	{{ parent() }}
+	<script type="text/javascript" src="{{ asset('js/bootstrap-checkbox.min.js') }}"></script>
+	{% set initialise = "$('.yes-no').checkboxpicker({
+			iconCls: 'glyphicons'
+		});" %}
+	{% include "BusybeeHomeBundle:Form:initAjaxForm.html.twig" %}
+
+	<script type="text/javascript">
+		$(document).on('click', '#generatePassword', function(){
+			$('input[name="password1"]').val('{{ password.text|raw }}');
+			$('input[name="password1"]').get(0).type = "text";
+			$('input[name="password1"]').blur(function() {
+				$('input[name="password1"]').get(0).type = "password";
+			});
+			$('input[name="password2"]').val('{{ password.text|raw }}');
+			alert("{{ 'misc.password1.copy'|trans ({}, 'BusybeeSystemBundle') }}" + "\n\n" + "{{ password.text|raw }}") ;
+		});
+	</script>
+	<script type="text/javascript">
+		$('.yes-no').checkboxpicker({
+			iconCls: 'glyphicons'
+		});
+	</script>
 {% endblock javascripts %}
