--- a/src/Busybee/SecurityBundle/Resources/views/User/register_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/register_content.html.twig
@@ -1,32 +1,62 @@
 {# src/General/SecurityBundle/Resources/views/User/register_content.html.twig #}
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-<div class="row marketing">
-	<div class="col-lg-12">
-		<div class="well row">
+{% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
+
+{{ form_start(form) }}
+	<div class="row">
+		<div class="col-sm-6 well">
 			{{ form_row(form.email) }}
 		</div>
-		<div class="well row">
+		<div class="col-sm-6 well">
 			{{ form_row(form.username) }}
 		</div>
+	</div>
 
-		<div class="well row">
-				{{ form_row(form.enabled) }}
-		</div>
-
-
-		<div class="well row">
-			{{ form_row(form.plainPassword) }}
-		</div>
-		<div class="well row">
+	<div class="row">
+		<div class="col-sm-6 well">
 			{{ form_row(form.groups) }}
 		</div>
-		<div class="well row">
+		<div class="col-sm-6 well">
 			{{ form_row(form.directroles) }}
 		</div>
-		<div class="well text-center row">
-			{{ form_widget(form.register) }}
-			{{ form_widget(form.cancel) }}
+	</div>
+	<div class="row">
+		<div class="well col-sm-6">
+			<div class="form-group">
+				<label for="password1">{{ 'misc.password1.title'|trans({}, 'BusybeeSystemBundle') }}</label><br />
+				<span class="field-help">{{ 'misc.password1.message'|trans ({'%minLength%': password.minLength, '%numbers%': password.numbersText, '%mixedCase%': password.mixedCaseText, '%specials%': password.specialsText }, 'BusybeeSystemBundle') }}</span>
+				<input type="password" title="{{ 'misc.password1.message'|trans ({'%minLength%': password.minLength, '%numbers%': password.numbersText, '%mixedCase%': password.mixedCaseText, '%specials%': password.specialsText }, 'BusybeeSystemBundle') }}" id="password1" name="password1" value="" required pattern="{{ password.pattern }}" class="form-control"  onchange="this.setCustomValidity(this.validity.patternMismatch ? this.title : '');
+	if(this.checkValidity()) form.password2.pattern = this.value;
+	" />
+			</div>
+		</div>
+		<div class="well col-sm-6 ">
+			<div class="form-group">
+				<label for="password2">{{ 'misc.password2.title'|trans({}, 'BusybeeSystemBundle') }}</label><br />
+				<span class="field-help">{{ 'misc.password2.message'|trans({}, 'BusybeeSystemBundle') }}</span>
+				<input type="password" title="{{ 'misc.password2.message'|trans({}, 'BusybeeSystemBundle') }}" id="password2" name="password2" value="" required pattern="{{ password.pattern }}" class="form-control" onchange="
+	this.setCustomValidity(this.validity.patternMismatch ? this.title : '');
+	" />
+			</div>
 		</div>
 	</div>
-</div>	
+	<div class="row">
+		<div class="col-sm-5 well">
+			{{ form_row(form.enabled) }}
+		</div>
+		<div class="well col-sm-2">
+			<div class="form-group text-right">
+				<button type="button" id="generatePassword" name="generatePassword" class="btn btn-info">{{ 'misc.password1.generate'|trans({}, 'BusybeeSystemBundle') }}</button>
+			</div>
+		</div>
+		<div class="col-sm-5 well">
+			<div class="form-group text-right">
+				{{ form_widget(form.register) }}
+				{{ form_widget(form.cancel) }}
+			</div>
+		</div>
+	</div>	
+	{% do form.plainPassword.setRendered %}
+{{ form_end(form) }}
+
