--- a/src/Busybee/SecurityBundle/Resources/views/User/reset.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/reset.html.twig
@@ -1,6 +1,5 @@
 {# src/General/SecurityBundle/Resources/views/User/reset.html.twig #}
-{% extends "BusybeeHomeBundle:Default:index.html.twig" %}
-
+{% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
@@ -8,7 +7,6 @@
 {{ parent() }}
 	<link href="{{ asset('css/glyphicons.css') }}" type="text/css" rel="stylesheet" />
 {% endblock stylesheets %}
-
 
 {% block title %}{{ parent() }}{{ 'user.reset.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'user.reset.title'|trans }}{% endblock headerTitle %}
