--- a/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
@@ -15,59 +15,12 @@
 {% block headerLead %}{{ 'system.update.description'|trans }}{% endblock headerLead %}
 
 {% block contentContainer %}
-	<div class="row">
-		<div class="col-sm-6">
-			<div class="panel panel-{% if config.version['system'] == config.VersionSys %}success{% else %}warning{% endif %}">
-				<div class="panel-heading">
-					<h3 class="panel-title">{{ 'system.version.system.title'|trans ({'%version%': config.VersionSys}) }}</h3>
-				</div>
-				<div class="panel-body">
-					<p>{{ 'system.version.system.description'|trans ({'%version%': config.version['system']}) }}</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<div class="panel panel-{% if config.version['database'] == config.Versiondb %}success{% else %}warning{% endif %}">
-				<div class="panel-heading">
-					<h3 class="panel-title">{{ 'system.version.database.title'|trans ({'%version%': config.Versiondb }) }}</h3>
-				</div>
-				<div class="panel-body">
-					<p>{{ 'system.version.database.description'|trans ({'%version%': config.version['database']}) }}</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-12">
-			{% if config.dbUpdate > 0 %}
-			<div class="panel panel-warning">
-				<div class="panel-heading">
-					<h3 class="panel-title">{{ 'system.update.database.title'|trans }}</h3>
-				</div>
-				<div class="panel-body">
-					<p><button class="btn btn-warning" id="ajaxLoad" style="float: right"><span class="glyphicons glyphicons-roundabout"></span>Update</button>
-					{% transchoice config.dbUpdate with  {'%count%': config.dbUpdate} %}
-						system.update.database.required
-					{% endtranschoice %}</p>
-					<p>{{ 'system.update.database.warning'|trans }}</p>
-				</div>
-			</div>
-			{% else %}
-			<div class="panel panel-success">
-				<div class="panel-heading">
-					<h3 class="panel-title">{{ 'system.update.database.title'|trans }}</h3>
-				</div>
-				<div class="panel-body">
-					{{ 'system.update.database.notRequired'|trans }}
-				</div>
-			</div>
-			{% endif %}
-		</div>
-	</div>
-
+{% include 'SystemBundle:Update:index_content.html.twig' %}
 {% endblock contentContainer %}
 
-{% set action = path('update_database') %}
 
 {% block javascripts %}
-{{parent() }}
-{% include "BusybeeHomeBundle:Form:initAjaxContent.html.twig" %}
+	{{parent() }}
+	{% set action = path('update_database') %}
+	{% include "BusybeeHomeBundle:Form:initAjaxContent.html.twig" %}
 {% endblock javascripts %}
