--- a/web/css/main.css
+++ b/web/css/main.css
@@ -27,12 +27,36 @@ body {
 	font-style: italic;
 	font-size: 85% ;
 	color: #3DB3D7;
+	text-align: justify ;
+	display: block;
 }
 @media screen and (min-width: 768px) {
 	.dropdown:hover>.dropdown-menu {
+		display: block;
+	}
+	.dropdown-submenu:hover > .dropdown-menu {
 		display: block;
 	}
 }
 p {
 	text-align: justify;
 }
+.row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+}
+.row > [class*='col-'] {
+  display: flex;
+  flex-direction: column;
+}
+.form-group {
+	margin-bottom: 0;
+}
+.yesno-right {
+	float: right ;
+	margin-left: 5px;
+}
+	
